Add redis for DessertService.java